@@ -1,3 +1,11 @@
+2012-03-27 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCsymt.c,
+	  src/z80/gen.c,
+	  support/regression/tests/gcc-torture-execute-960801-1.c,
+	  support/regression/tests/longlong.c:
+	  Support for returning long long and unsigned long long in z80, z180 and r2k port.
+
 2012-03-26 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/z80/gen.c:
